# solana_account_studio

./: .gitignore  AGENT.md  BREAKTOOL.md  Cargo.toml  DATABASE.md  DEVELOPMENT_STATUS.md  DIOXUS.md  ERROR_RUNTIME.md  FLOWTOOL.md  LICENSE  MVP_PROCESS.md  PLAN.md  PRODUCT.md  README.md  ROADMAP.md  SURFPOOL.md  TAILWIND_DIOXUS.md  TEST_DIOXUS.md  WORFLOW.md  WORKFLOW.md  agent.md  algorithm.md  docs_summary.txt  note  order_agent.md  rust-toolchain.toml  rust-toolchain.toml.backup  summary_err.md  test_surfpool_integration.md
.docs_reports/: docs_analysis_20251019_205357.txt  docs_analysis_20251019_210329.txt
.github/workflows/: ci.yml  err.md
config/: .env
config/turso/: turso.env.example
docs/: AGENT.md  BREAKTOOL.md  DATABASE.md  DIESEL_TO_TURSO.md  DIOXUS.md  ERROR_RUNTIME.md  FLOWTOOL.md  MULTI_PLATFORM.md  MVP_STATUS.md  Makefile  PRODUCT.md  ROADMAP.md  SCRIPT_SUMMARY.md  SURFPOOL.md  Solana Uses Base58 Encoding (Not Base64 or Hex).md  TEST_DIOXUS.md  algorithm.md  command  dx  order_agent.md  system_color.md
docs/archived/: QUICKSTART.md  ROADMAP.md  SURFPOOL.md  USAGE.md
docs/comm/: command  new_command
docs/instruction-templates/: README.md
docs/phase1-ui-json/: README.md
docs/rpc/: INTEGRATION_GUIDE.md  SOLANA_RPC.md
docs/turso/: README.md
scripts/: cleanup-warnings.sh  dev.sh  fast-mvp-push.sh  mvp-delivery-pipeline.sh  rapid-mvp-dev.sh  read_all_docs.sh  read_docs.sh  run-web.sh  setup-turso.sh
src/components/program_builder/: mod.rs
surfdesk-cli/: Cargo.toml
surfdesk-cli/src/: main.rs
surfdesk-core/: Cargo.toml  Dioxus.toml
surfdesk-core/assets/: styles.css
surfdesk-core/src/: app.rs  error.rs  lib.rs  main.rs  platform.rs  routes.rs  state.rs  transactions.rs  types.rs
surfdesk-core/src/accounts/: mod.rs
surfdesk-core/src/components/: account_explorer.rs  account_explorer.rs.backup  account_monitor.rs  app_shell.rs  button.rs  card.rs  common.rs  dashboard.rs  dropdown.rs  footer.rs  form.rs  forms.rs  header.rs  input.rs  loading.rs  main_content.rs  mod.rs  modal.rs  monitoring.rs  navigation.rs  notification.rs  program_builder.rs  program_manager.rs  settings.rs  sidebar.rs  status_bar.rs  surfpool_control.rs  table.rs  transaction_builder.rs  wallet_import.rs
surfdesk-core/src/components/layout/: mod.rs
surfdesk-core/src/components/surfpool/: control_panel.rs  deployment_wizard.rs  environment.rs  mod.rs  page.rs  process_monitor.rs  surfpool_control.rs  surfpool_controller.rs  ui_manager.rs
surfdesk-core/src/database/: connection.rs  mod.rs  schema.rs
surfdesk-core/src/database/migrations/: mod.rs
surfdesk-core/src/models/: mod.rs
surfdesk-core/src/pages/: accounts.rs  home.rs  mod.rs  program_builder.rs  programs.rs  surfpool.rs
surfdesk-core/src/rpc/: mod.rs
surfdesk-core/src/services/: account.rs  config.rs  database.rs  events.rs  logger.rs  mod.rs  monitoring.rs  program.rs  solana.rs  solana_rpc.rs  surfpool.rs  surfpool_service.rs  websocket.rs
surfdesk-core/src/services/surfpool_service/: mod.rs
surfdesk-core/src/solana_rpc/: account_service.rs  accounts.rs  mod.rs  pubkey_key.rs  transactions.rs  wallet.rs
surfdesk-core/src/solana_rpc/accounts/: mod.rs
surfdesk-core/src/styles/: design-system.css  design_system.rs  dropdown.css  dropdown.rs  input.css  input.rs  keyboard.css  keyboard.rs  loading.css  loading.rs  mod.rs  modal.css  modal.rs  styles.css  toast.css  toast.rs
surfdesk-core/src/surfpool/: environment.rs  mod.rs
surfdesk-core/src/transactions/: mod.rs
surfdesk-core/src/utils/: crypto.rs  format.rs  mod.rs  validation.rs
surfdesk-core/src/wallet/: mod.rs
surfdesk-desktop/: Cargo.toml
surfdesk-desktop/assets/: index.html  styles.css
surfdesk-desktop/src/: keyboard.rs  main.rs  surfpool.rs
surfdesk-desktop/src/components/: button.rs  card.rs  input.rs  loading.rs  mod.rs  modal.rs  toast.rs
surfdesk-desktop/src/pages/: accounts.rs  dashboard.rs  mod.rs  monitoring.rs  surfpool.rs
surfdesk-desktop/src/styles/: input.css  modal.css  toast.css
surfdesk-desktop/src/surfpool/: mod.rs
surfdesk-tui/: Cargo.toml
surfdesk-tui/src/: main.rs
surfdesk-web/: Cargo.toml
surfdesk-web/src/: main.rs
surfdesk-web/src/style/: mod.rs
tests/: Cargo.toml  README.md
tests/common/: mock_data.rs  mod.rs  test_helpers.rs
tests/integration/: app_shell_tests.rs  cross_platform_tests.rs  mod.rs  navigation_tests.rs  surfpool_integration.rs
tests/unit/: mod.rs
tests/unit/components/: footer_tests.rs  header_tests.rs  mod.rs  modal_tests.rs  sidebar_tests.rs
tests/unit/database/: mod.rs
tests/unit/services/: config_tests.rs  mod.rs
