[workspace]
members = [
    "surfdesk-core",
    "surfdesk-desktop"
]
resolver = "2"

[workspace.dependencies]
# Dioxus 0.6+ framework
dioxus = { version = "0.6", features = ["desktop", "web"] }
dioxus-router = "0.6"
dioxus-signals = "0.6"
libsql = { version = "0.5" }
libsql-sys = { version = "0.5" }


# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing dependencies
pretty-assertions = "1.0"
dioxus-ssr = "0.6"
env_logger = "0.10"

# Database - Turso (libsql) replacing Diesel

chrono = { version = "0.4", features = ["serde"] }

# Web platform dependencies
console_log = { version = "1.0" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }

# Logging
log = "0.4"

# Terminal UI dependencies
crossterm = "0.27"
ratatui = "0.26"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
clap = { version = "4.4", features = ["derive"] }
config = "0.14"

# Testing
proptest = "1.4"

# SurfPool integration (external tool, not a crate dependency)
# surfpool is expected to be installed separately via: cargo install surfpool
process_control = "0.1"
port-allocator = "0.1"



[workspace.lints.rust]
# Allow dead code for development and feature work-in-progress
dead_code = "allow"
# Allow unused imports for modular architecture
unused_imports = "allow"
# Allow unused variables for development
unused_variables = "allow"
# Allow ambiguous glob re-exports for style modules
ambiguous_glob_reexports = "allow"
# Allow non-Send/Sync Arc for current architecture
arc_with_non_send_sync = "allow"
# Allow static mut references for current development patterns
static_mut_refs = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
