[package]
name = "surfdesk-core"
version = "0.1.0"
edition = "2021"
description = "Core library for SurfDesk - Multi-platform Solana Account Studio"
license = "MIT"
repository = "https://github.com/your-org/surfdesk"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dioxus framework
dioxus = { workspace = true }
dioxus-router = { workspace = true }
dioxus-signals = { workspace = true }

# Additional dependencies
env_logger = "0.10"
libc = "0.2"
async-trait = "0.1"
gloo-net = { version = "0.5", features = ["http"], optional = true }
cfg-if = "1.0"

# Solana ecosystem
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-account-decoder = { workspace = true, optional = true }
anchor-lang = { workspace = true, optional = true }
anchor-client = { workspace = true, optional = true }
bs58 = "0.5"

# Async runtime and utilities (desktop only)
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
uuid = { workspace = true }

# Database
diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
chrono = { workspace = true, features = ["wasmbind"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
log = { workspace = true }
console_log = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
dirs = "6.0.0"
# solana-transaction-status = "3.0.6"  # Temporarily commented out due to zeroize conflicts
zeroize = { version = "=1.3.0", features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["database", "solana", "surfpool"]
database = ["diesel", "diesel_migrations"]
solana = ["solana-sdk", "solana-client", "solana-account-decoder", "anchor-lang", "anchor-client", "tokio"]
surfpool = []
web = ["dioxus/web", "console_log", "wasm-bindgen", "web-sys", "wasm-bindgen-futures", "js-sys", "chrono/wasmbind", "gloo-net"]
desktop = ["dioxus/desktop", "tokio"]
tui = ["tokio"]
