[package]
name = "surfdesk-core"
version = "0.1.0"
edition = "2021"
description = "Core library for SurfDesk - Multi-platform Solana Account Studio"
license = "MIT"
repository = "https://github.com/your-org/surfdesk"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dioxus framework
dioxus = { workspace = true }
dioxus-router = { workspace = true }
dioxus-signals = { workspace = true }

# Additional dependencies
env_logger = "0.10"
libc = "0.2"
async-trait = "0.1"
gloo-net = { version = "0.5", features = ["http"], optional = true }
cfg-if = "1.0"
base64 = "0.22"
gloo-console = "0.3"



# Additional utilities
bs58 = "0.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
uuid = { workspace = true }
libsql = { workspace = true, optional = true }
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"], optional = true }
diesel_migrations = { version = "2.1", optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
console_log = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
dirs = "6.0.0"
# solana-transaction-status = "3.0.6"  # Temporarily commented out due to zeroize conflicts
zeroize = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["database", "surfpool"]
database = ["libsql"]
diesel = ["dep:diesel", "dep:diesel_migrations"]
surfpool = []
solana = []
web = ["dioxus/web", "console_log", "wasm-bindgen", "web-sys", "wasm-bindgen-futures", "js-sys", "chrono/wasmbind", "gloo-net"]
desktop = ["dioxus/desktop"]
tui = []
