[package]
name = "surfdesk-web"
version = "0.1.0"
edition = "2021"
description = "Web application for SurfDesk - Multi-platform Solana Account Studio"
license = "MIT"
repository = "https://github.com/your-org/surfdesk"

[[bin]]
name = "surfdesk-web"
path = "src/main.rs"

[dependencies]

# --- Randomness (fix getrandom issue) ---
# Core library
surfdesk-core = { path = "../surfdesk-core", features = ["web", "solana", "database"] }

# Dioxus web
dioxus = { workspace = true, features = ["web"] }
dioxus-router = { workspace = true }

# Web utilities
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = "0.3"
gloo-console = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
dioxus-web = "0.6"
wasm-bindgen-futures = "0.4"

# Logging
log = { workspace = true }
console_log = { workspace = true, optional = true }

# Configuration
clap = { workspace = true, features = ["derive"] }

# HTTP client (for web API calls)
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Time utilities
chrono = { workspace = true, features = ["wasmbind"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "wasm-bindgen"] }

# URL parsing
url = "2.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio-test = "0.4"

[features]
default = ["web"]
web = ["dioxus/web", "console_log"]
console = ["console_log"]
